--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@modelcontextprotocol/sdk": "^1.10.1",
     "acorn": "^8.15.0",
     "commander": "^12.1.0",
-    "rolldown": "^1.0.0-beta.47",
+    "es-toolkit": "^1.41.0",
     "ora": "^8.0.1",
+    "rolldown": "^1.0.0-beta.47",
     "zod": "^3.25.76"
   },
   "devDependencies": {
